--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,7 +18,7 @@
         </ul>
         <div class="d-flex">
           <input class="form-control me-2" #txtInput (keyup.enter)="goToUser(txtInput.value)" type="search" placeholder="Search" aria-label="Search">
-          <button (clicl)="goToUser(txtInput.value)" class="btn btn-outline-success" type="submit">Search</button>
+          <button (click)="goToUser(txtInput.value)" class="btn btn-outline-success" type="submit">Search</button>
         </div>
       </div>
     </div>
